@@ -3,7 +3,7 @@
 /***************************************************************
  * Extension Manager/Repository config file for ext "l10nmgr".
  *
- * Auto generated 08-06-2015 21:05
+ * Auto generated 10-03-2015 18:54
  *
  * Manual updates:
  * Only the data in the array - everything else is removed by next
@@ -14,7 +14,7 @@ $EM_CONF[$_EXTKEY] = array (
 	'title' => 'Localization Manager',
 	'description' => 'Module for managing localization import and export',
 	'category' => 'module',
-	'version' => '3.6.3',
+	'version' => '3.6.4',
 	'state' => 'beta',
 	'uploadfolder' => false,
 	'createDirs' => 'uploads/tx_l10nmgr/settings,uploads/tx_l10nmgr/saved_files,uploads/tx_l10nmgr/jobs,uploads/tx_l10nmgr/jobs/out,uploads/tx_l10nmgr/jobs/in,uploads/tx_l10nmgr/jobs/done,uploads/tx_l10nmgr/jobs/_cmd',
