@@ -15,7 +15,7 @@ if (TYPO3_MODE == 'BE') {
 
 //! increase with every change to XML Format
 define('L10NMGR_FILEVERSION', '1.2');
-define('L10NMGR_VERSION', '3.6.3');
+define('L10NMGR_VERSION', '3.6.4');
 
 $GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['lowlevel']['cleanerModules']['tx_l10nmgr_index'] = array('EXT:l10nmgr/class.tx_l10nmgr_index.php:tx_l10nmgr_index');
 $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['t3lib/class.t3lib_tcemain.php']['processDatamapClass']['tx_l10nmgr'] = 'EXT:l10nmgr/class.l10nmgr_tcemain_hook.php:&tx_l10nmgr_tcemain_hook';
